--- a/styles/style.css
+++ b/styles/style.css
@@ -723,8 +723,8 @@ body {
 .restaurant__cards {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: repeat();
-      grid-template-rows: repeat();
+  -ms-grid-rows: none;
+      grid-template-rows: none;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
   grid-gap: 20px;
